--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Sans:wght@400;700&family=Montserrat:wght@700&family=Nanum+Gothic&family=Playfair+Display:wght@600&display=swap");
 
 @tailwind base;
 @tailwind components;
