--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,18 @@ body,
   font-family: "DM Sans", sans-serif;
   @apply text-gray-500;
 }
+
+.pin {
+  display: flex;
+  align-items: center;
+  width: 180px;
+  color: var(--main-blue);
+}
+
+.pin-icon {
+  font-size: 4rem;
+}
+
+.pin-text {
+  font-size: 1.3em;
+}
